--- a/style.css
+++ b/style.css
@@ -67,3 +67,27 @@ nav{
   padding: 10px;
   text-align: center;
 }
+
+
+/* for mobile Phone */
+
+@media only screen and (max-width: 600px) {
+  .topnav{
+    position: relative;
+    display: inline-block;
+  }
+  
+  .topnav a {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    padding: 12px 16px;
+    z-index: 1;
+  }
+  
+  .topnav:hover .topnav a {
+    display: block;
+  }
+}
