--- a/css/style.css
+++ b/css/style.css
@@ -792,3 +792,14 @@ a:focus {
   color: #ffffff;
 }
 /*# sourceMappingURL=style.css.map */
+
+
+
+
+
+/* addded  by my self  */
+
+.social_box a{
+  margin: 10px; /* Adjust spacing as needed */
+  display: inline-block; /* Ensures spacing works in all browsers */
+}
